# generalized_suffix_tree

./: Cargo.toml  README.md
benches/: main.rs
src/: data.rs  lib.rs  suffix_node.rs  suffix_tree.rs  tree_item.rs  utils.rs
src/data/: tree_item.rs
src/iter/: edge_iter.rs  node_iter.rs
src/suffix_node/: node.rs
src/suffix_tree/: tree.rs
tests/: tests.rs
