[lib]
name = "generalized_suffix_tree"
path = "src/lib.rs"

[[bin]]
name = "gst"
path = "src/bin/bin.rs"


[package]
name = "generalized_suffix_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.3.1"
clap = "4.3.11"
error-chain = "0.12.4"
indicatif = "0.17.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
