[lib]
name = "generalized_suffix_tree"
path = "src/lib.rs"

[[bin]]
name = "gst"
path = "src/bin/bin.rs"


[package]
name = "kgst"
version = "0.1.1"
edition = "2021"
path = "src/lib.rs"
authors = ["Sriram Vijendran <vijendran.sriram@email.com>"]
license = "MIT"
description = "A library containing the implementation of a K-Truncated Generalized Suffix Tree using Ukkonen's Algorithm."
readme = "README.md"
homepage = "https://github.com/sriram98v/generalized_suffix_tree"
repository = "https://github.com/sriram98v/generalized_suffix_tree"
keywords = ["lib"]
categories = ["library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.3.1"
clap = "4.3.11"
error-chain = "0.12.4"
indicatif = "0.17.5"
itertools = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
